# wincoll

./: !Run,feb  !RunImage,ffb  .gitignore  DATData,ffd  Data,ffd  InitSound,ffb  Level01,ffd  Level01.tmx  Level02  Level02,ffd  Level02.tmx  Level03,ffd  Level03.tmx  Level04  Level04,ffd  Level04.tmx  Level05,ffd  Level05.tmx  Level06  Level06,ffd  Level06.tmx  Level07.tmx  Level09.tmx  LevelDes,ffb  Makefile  README.md  RISC OS.md  ScreenDes,ffb  WinColl.fs  WinColl.tiled-session  WinColl.tsx  WinSpr,ff9  convert-image  dist-riscos  level-diff  level2tiled  mrmatt2tiled  ptext.py  pyproject.toml  riscos2tiled  (+4 more)
!WinColl/: !Boot,feb  !RunImage,ff8  !RunImage,ffb  !Sprites,ff9  Icons,ff9  Level01,ffd  Level02,ffd  Level03,ffd  Level04,ffd  Level05,ffd  Level06,ffd  Level07,ffd  UserVoices,ffa  WinColl.fs  WinSpr,ff9
.github/: install-dependencies.sh
.github/workflows/: build-release-binaries.yml  ci.yml  pages.yml  release.yml
acorn-mode-1/: license.txt  readme.txt
browser/: .gitignore  README.md  index.html
mrmatt/: __init__.py  __main__.py  mrmatt_game.py
mrmatt/levels/: Akihabara.tmx  French Garden.tmx  Granny Smith.tmx  Many Happy Returns.tmx  MrMatt.tsx  Upside Down.tmx  apple_town.mat  bombs_away!.mat  concrete_dessert.mat  djamdjak_rules!.mat  easy_one.mat  easy_too.mat  lotsa_stones.mat  start_here.mat  try_this!.mat  varvotzell.mat
nifki-levels/: 01 Easy diamonds.tmx  02 First rocks.tmx  03 First earth.tmx  03 Try not to die.tmx  04 Fewer easy diamonds.tmx  05 Do the shimmy.tmx  06 Gems in order.tmx  07 Simple stairway.tmx  08 Guided rockfall.tmx  09 Gently does it.tmx  10 Route planning.tmx  11 Hard rock shuffle.tmx  12 First level.tmx  12 Keep your options open.tmx  13 Last move.tmx  13 Second level.tmx  14 Rock heavy.tmx  README.md
po/: el.po  fr.po  mrmatt.pot.in  wincoll.pot  wincoll.pot.in
po-argparse/: argparse.pot  fr.po
test-levels/: 01 Tiny map.tmx  02 Map with missing tiles.tmx  02 One diamond.tmx  03 One diamond.tmx  README.md  WinColl.tsx
web-page/: Title.in.txt  body.in.md  breadcrumb.in.py  email.in.py  index.nancy.html  lastmodified.in.py  markdown-to-html.in.sh  menudirectory.in.py  pageinsite.in.py  path-to-root.in.py  play.html  style.css  template.in.html
wincoll/: Level01.tmx  Level02.tmx  Level04.tmx  Level09.tmx  WinColl.tsx  __init__.py  __main__.py  event.py  game.py  instructions.py  langdetect.py  main-pygbag.py  main.py  ptext.py  screen.py  style.json  wincoll_game.py
wincoll/levels/: 01 A gentle introduction.tmx  01.tmx  02 Hi! from Pav.tmx  02.tmx  03 On a Coconut Island.tmx  03.tmx  04 Not a rip-off.tmx  04.tmx  05 Long way round.tmx  05.tmx  06 Which key.tmx  06.tmx  07 Fuzzy.tmx  07.tmx  08 Spiral Galaxy.tmx  08 Which key?.tmx  08.tmx  09 Escape from Pompeii.tmx  09.tmx  10 Riddle me this.tmx  11 Doctor Jones, I presume.tmx  11.tmx  12 Stairway to Hell.tmx  13 Race to the top.tmx  13 Round and round.tmx  14 Alchemy.tmx  15 Race to the top.tmx  Level01.tmx  Level02.tmx  Level03.tmx  Level05.tmx  Level06.tmx  WinColl.tsx
