[project]
name = "wincoll"
version = "0.9"
description = "Simple rocks-and-diamonds game"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/wincoll"}
requires-python = ">= 3.9"
dependencies = [
    "importlib_resources >= 5.10",
    "pygame >= 2.0.0",
    "pyscroll",
    "pytmx",
    "typing_extensions",
]
classifiers = [
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Programming Language :: Python :: 3",
]

[project.scripts]
wincoll = "wincoll:main"

[build-system]
requires = [
    "setuptools >= 62.3.0",
]

[tool.setuptools]
packages = [
    "wincoll",
]

[tool.setuptools.package-data]
wincoll = ["*.png", "*.wav", "*.tmx", "*.tsx", "*.ttf"]

[tool.mypy]
exclude = ['^dist', '^build']
strict = true

[[tool.mypy.overrides]]
module = "wincoll.ptext"
ignore_errors = true

[tool.pylint.main]
# Use multiple processes to speed up Pylint: 0 = auto-detect.
jobs = 0
ignore-paths = ["wincoll/ptext.py"]

[tool.pylint.MASTER]
init-hook = 'import sys; sys.path.append(".")'

[tool.pylint.format]
const-naming-style = "any"
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-member",
    "fixme",
    "global-statement",
    "redefined-outer-name",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
]
enable = [
    "useless-suppression",
]
