[project]
name = "WinColl"
version = "0.9.12"
description = "Simple rocks-and-diamonds game"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/wincoll"}
requires-python = ">= 3.11"
dependencies = [
    "chambercourt >= 0.9.2",
]
classifiers = [
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Programming Language :: Python :: 3",
]

[project.scripts]
wincoll = "wincoll:main"

[build-system]
requires = [
    "build",
    "setuptools >= 62.3.0",
]

[tool.setuptools]
packages = [
    "wincoll",
]

[tool.setuptools.package-data]
wincoll = ["**/*.png", "**/*.wav", "**/*.tmx", "**/*.tsx", "**/*.ttf", "**/*.mo"]

[tool.mypy]
exclude = ['^dist', '^build']
strict = true

[tool.pylint.main]
# Use multiple processes to speed up Pylint: 0 = auto-detect.
jobs = 0

[tool.pylint.MASTER]
init-hook = 'import sys; sys.path.append(".")'

[tool.pylint.format]
const-naming-style = "any"
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-member",
    "fixme",
    "global-statement",
    "redefined-outer-name",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-statements",
]
enable = [
    "useless-suppression",
]

[[tool.cxfreeze.executables]]
script = "wincoll/__main__.py"
base = "gui"
icon = "app-icon"
shortcut_name = "WinColl"
shortcut_dir = "DesktopFolder"

[tool.cxfreeze.build_exe]
include_msvcr = true
